--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,9 @@
 .meow::-webkit-scrollbar {
   display: none;
 }
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
 
 @custom-variant dark (&:is(.dark *));
 * {
